--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -260,4 +260,10 @@ header {
       font-size: 0.8em;
       color: rgba(96, 123, 141, 0.5); }
 
+.graph-view-container {
+  height: 100%; }
+  .graph-view-container svg {
+    width: 100%;
+    height: 100%; }
+
 /*# sourceMappingURL=index.css.map */
