Link entity in table and detail

--- a/front-end/js/components/info-bar/info-bar.html
+++ b/front-end/js/components/info-bar/info-bar.html
@@ -14,7 +14,7 @@
 			</section>
 			<section>
 				<h2>Year</h2>
-				<p>{{infoBarCtrl.entity.year}}</p>
+				<p>{{infoBarCtrl.entity.pub_year}}</p>
 			</section>
 			<section>
 				<h2>Conference</h2>
@@ -48,7 +48,7 @@
 			</section>
 			<section>
 				<h2>Year</h2>
-				<textarea name="year" id="year" ng-model="infoBarCtrl.tempEntityDetail.year" placeholder="Publication Year"></textarea>
+				<textarea name="year" id="year" ng-model="infoBarCtrl.tempEntityDetail.pub_year" placeholder="Publication Year"></textarea>
 			</section>
 			<section>
 				<h2>Conference</h2>
