Add fomatter for tag model

--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -160,6 +160,7 @@ header {
       padding: 0.5em;
       margin: 0 0.5em 0.5em 0;
       font-size: 0.8em;
+      text-transform: capitalize;
       -webkit-transition: background 0.3s;
       cursor: pointer; }
       .info-bar .content-container .tag:hover {
