--- a/front-end/js/components/info-bar/info-bar.html
+++ b/front-end/js/components/info-bar/info-bar.html
@@ -56,7 +56,7 @@
 			</section>
 			<section>
 				<h2>Tags</h2>
-				<textarea name="tags" id="tags" placeholder="Put tags here, separate with comma"></textarea>
+				<textarea name="tags" id="tags" placeholder="Put tags here, separate with comma" ng-model="infoBarCtrl.tempEntityDetail.tag" tag-input-formatter></textarea>
 			</section>
 			<section>
 				<h2>Abstract</h2>
