--- a/front-end/partials/table-view.html
+++ b/front-end/partials/table-view.html
@@ -1,6 +1,6 @@
 <div class="table-view-container" ng-controller="TableViewController as tableViewCtrl">
 <!-- <div class="table-header"></div> -->
-<div ui-grid="gridOptions" class="grid" ui-grid-resize-columns ui-grid-move-columns></div>
+	<div ui-grid="tableViewCtrl.gridOptions" class="grid" ui-grid-resize-columns ui-grid-move-columns></div>
 
 
 </div>
