Fix bugs in API

--- a/front-end/js/components/info-bar/info-bar.html
+++ b/front-end/js/components/info-bar/info-bar.html
@@ -19,6 +19,14 @@
 				<p>{{infoBarCtrl.entity.pub_year}}</p>
 			</section>
 			<section>
+				<h2>Citation Count</h2>
+				<p>{{infoBarCtrl.entity.cite_count}}</p>
+			</section>
+			<section>
+				<h2>ISBN</h2>
+				<p>{{infoBarCtrl.entity.ISBN}}</p>
+			</section>
+			<section>
 				<h2>Conference</h2>
 				<p>{{infoBarCtrl.entity.conference}}</p>
 			</section>
@@ -51,6 +59,14 @@
 			<section>
 				<h2>Year</h2>
 				<textarea name="year" id="year" ng-model="infoBarCtrl.tempEntityDetail.pub_year" placeholder="Publication Year"></textarea>
+			</section>
+			<section>
+				<h2>Cite Count</h2>
+				<textarea name="cite-count" id="cite-count" ng-model="infoBarCtrl.tempEntityDetail.cite_count" placeholder="Citation Count"></textarea>
+			</section>
+			<section>
+				<h2>ISBN</h2>
+				<textarea name="isbn" id="isbn" ng-model="infoBarCtrl.tempEntityDetail.ISBN" placeholder="ISBN"></textarea>
 			</section>
 			<section>
 				<h2>Conference</h2>
