Add search by title function

--- a/front-end/js/components/search-bar/search-bar.html
+++ b/front-end/js/components/search-bar/search-bar.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="search-button-container">		
 			<h2>Search</h2>
-			<div class="search-button">
+			<div class="search-button" ng-click="searchBarCtrl.search()">
 				<div></div>
 			</div>
 	</div>
