--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -115,7 +115,7 @@ body{
 	}
 
 
-	$icon-list: 'add','edit','cross','trash','tick','hide';
+	$icon-list: 'add','add-dark','edit','cross','trash','tick','hide';
 
 	@each $icon in $icon-list{
 		&.#{$icon} > div{
@@ -554,7 +554,7 @@ header{
 			& > div{
 				width:10px;
 				height:10px;
-				background:url('../resources/add-icon.png');
+				background:url('../resources/add-dark-icon.png');
 				background-size:contain;	
 			}
 		}
