--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -8,10 +8,14 @@ $color-text-fade:rgba(#607b8d,0.5);
 $color-text-textarea:$color-text-secondary;
 $color-background:#f9fafb;
 $color-background-table:$color-background;
+$color-background-table-header:$color-secondary;
 $color-background-table-secondary:rgba(#9db1bf,0.1);
 $color-background-hover:rgba($color-text-fade,0.1);
 $color-background-focus:rgba($color-text-fade,0.3);
 $color-background-textarea:#f4f5f7;
+$color-text-cite-table:$color-text-textarea;
+$color-background-cite-table:$color-background-textarea;
+$color-background-cite-table-secondary:darken($color-background-textarea,5%);
 
 $color-border:rgba(#c0ccd5,0.5);
 $color-border-fade:rgba(#c0ccd5,0.3);
@@ -205,7 +209,7 @@ header{
 		border:0;
 
 		.ui-grid-top-panel{	
-			background:$color-secondary;
+			background:$color-background-table-header;
 			color:$color-text-revert;
 			font-weight:inherit;
 		}
@@ -378,6 +382,59 @@ header{
 	.note-container{
 		textarea{
 			height:25em;
+		}
+	}
+
+	.citation-container{
+		#cite_rating{
+			height:2.5em;
+		}
+		#cite_note{
+			height:6em;
+		}
+
+		.cite-container{		
+			height:12em;
+
+			overflow:scroll;
+			border:1px solid $color-border;
+			color:$color-text-cite-table;
+			cursor:pointer;
+
+			margin:0.5em;
+			.cite-row{
+				display:flex;			
+				&:nth-child(odd){
+					background:$color-background-cite-table;
+				}
+
+				&:nth-child(even){
+					background:$color-background-cite-table-secondary;
+				}
+
+				&:hover{
+					background:$color-background-hover;
+				}
+				&.active{
+					background:$color-highlight;
+					color:$color-text-revert;
+				}
+
+				&.header{
+					background:$color-background-table-header;
+					color:$color-text-revert;
+					font-size:0.7em;
+				}
+
+				div{
+					padding:0.5em 5px;
+
+				}
+				.rating{
+					font-weight:400;
+					width:30px;
+				}
+			}			
 		}
 	}
 }
