Add sample graph

--- a/front-end/partials/graph-view.html
+++ b/front-end/partials/graph-view.html
@@ -1,3 +1,8 @@
 <div class="graph-view-container">
-<graph></graph>
+<svg>
+	<g>
+		<g class="link-canvas"></g>
+		<g class="node-canvas"></g>
+	</g>
+</svg>
 </div>
