--- a/front-end/sass/index.scss
+++ b/front-end/sass/index.scss
@@ -20,6 +20,11 @@ $color-background-cite-table-secondary:darken($color-background-textarea,5%);
 $color-border:rgba(#c0ccd5,0.5);
 $color-border-fade:rgba(#c0ccd5,0.3);
 
+$color-graph-circle-stroke:$color-primary;
+$color-graph-circle-text-cite:$color-text-revert;
+$color-graph-circle-text-title:$color-text-fade;
+
+
 $z-main:0;
 $z-sidebar:1;
 $z-header:2;
@@ -629,4 +634,31 @@ header{
 		width:100%;
 		height:100%;		
 	}
+
+	.node{
+		circle{
+			
+			stroke-width:3;
+			stroke:$color-graph-circle-stroke;
+		}	
+
+		text{
+			font-weight:200;
+			text-anchor:middle;
+			&.cite-count{
+				fill:$color-graph-circle-text-cite;
+				
+			}
+			&.title{
+				fill:$color-graph-circle-text-title;
+			}
+		}
+	} 
+
+	.link{
+		stroke-width:2;
+		stroke:$color-graph-circle-stroke;
+	}
+
+
 }
