--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -212,7 +212,7 @@ header {
     height: 6em; }
   .info-bar .edit-container #abstract {
     height: 30em; }
-  .info-bar .detail-container:hover .button-container {
+  .info-bar:hover .button-container {
     opacity: 1;
     pointer-events: auto; }
   .info-bar .note-container textarea {
@@ -229,7 +229,9 @@ header {
     cursor: pointer;
     margin: 0.5em; }
     .info-bar .citation-container .cite-container .cite-row {
-      display: flex; }
+      display: flex;
+      align-items: center;
+      width: 100%; }
       .info-bar .citation-container .cite-container .cite-row:nth-child(odd) {
         background: #f4f5f7; }
       .info-bar .citation-container .cite-container .cite-row:nth-child(even) {
@@ -246,6 +248,7 @@ header {
       .info-bar .citation-container .cite-container .cite-row div {
         padding: 0.5em 5px; }
       .info-bar .citation-container .cite-container .cite-row .rating {
+        flex: none;
         font-weight: 400;
         width: 30px; }
 
@@ -381,12 +384,18 @@ header {
     height: 100%; }
   .graph-view-container .node circle {
     stroke-width: 3;
-    stroke: #334e5f; }
+    stroke: #334e5f;
+    -webkit-transition: fill 0.3s;
+    cursor: pointer; }
+    .graph-view-container .node circle:hover {
+      fill: #6ba7d5; }
   .graph-view-container .node text {
     font-weight: 200;
-    text-anchor: middle; }
+    text-anchor: middle;
+    pointer-events: none; }
     .graph-view-container .node text.cite-count {
-      fill: #f9fafb; }
+      fill: #f9fafb;
+      font-size: 0.8em; }
     .graph-view-container .node text.title {
       fill: rgba(96, 123, 141, 0.5); }
   .graph-view-container .link {
